--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -6,12 +6,12 @@ on:
   pull_request:
     branches:
       - master
-
+  workflow_dispatch:
 jobs:
   test:
     strategy:
       matrix:
-        go-version: [1.16.x, 1.13.x]
+        go-version: [1.19.x, 1.18.x]
         platform: [ubuntu-latest, macos-latest, windows-latest]
     runs-on: ${{ matrix.platform }}
     steps:
@@ -24,4 +24,3 @@ jobs:
       uses: actions/checkout@v2
     - name: Run tests
       run: go test -v -covermode=count ./...
-
